--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,8 @@
-<h2>MainController#index</h2>
+<h2>ドキュメント生成</h2>
+<hr />
+
+<%= form_tag "make" do %>
+    <%= text_area_tag :headText %>
+    <br />
+    <%= submit_tag "生成" %>
+<% end %>
