--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,6 +3,7 @@
 
 <%= form_tag "make" do %>
     <%= hidden_field_tag :project_id, @project.id %>
+    希望報酬金額：<%= number_field_tag :desiredReward, min: 0 %>
     <br />
     <%= submit_tag "生成" %>
 <% end %>
